@@ -917,17 +917,24 @@ class AllowedServicePointsAPITests extends APITests {
     final List<String> servicePointIds = response.stream()
       .map(JsonObject.class::cast)
       .map(sp -> sp.getString("id"))
-      .collect(Collectors.toList());
+      .toList();
 
     final List<String> servicePointNames = response.stream()
       .map(JsonObject.class::cast)
       .map(allowedSp -> allowedSp.getString("name"))
-      .collect(Collectors.toList());
+      .toList();
+
+    final List<String> servicePointDiscoveryDisplayName = response.stream()
+      .map(JsonObject.class::cast)
+      .map(allowedSp -> allowedSp.getString("discoveryDisplayName"))
+      .toList();
 
     // order is important: service points must be sorted by name
     assertThat(servicePointIds, contains(expectedIds.toArray(String[]::new)));
     assertThat(servicePointNames, contains(expectedServicePoints.stream()
       .map(sp -> sp.getJson().getString("name")).toArray(String[]::new)));
+    assertThat(servicePointDiscoveryDisplayName, contains(expectedServicePoints.stream()
+            .map(sp -> sp.getJson().getString("discoveryDisplayName")).toArray(String[]::new)));
   }
 
   private Response getCreateOp(String requesterId, String instanceId, String itemId,
